--- a/admin.html
+++ b/admin.html
@@ -623,7 +623,7 @@
     // Logout function
     function logout() {
       localStorage.clear();
-      window.location.href = "login.html";
+      window.location.href = "index.html";
     }
 
     // Tab Navigation
