--- a/index.html
+++ b/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Business Management System</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>تسجيل الدخول - نظام حسابات Mulberry Company في فلسطين</title>
+  <!-- تحميل خط عربي مميز -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <style>
-    /* Basic styling for login page */
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+    /* إعادة تعيين الهوامش والتعبئة */
+    body, html {
       margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Roboto', sans-serif;
+      direction: rtl;
     }
+    /* تنسيق فيديو الخلفية */
+    #bg-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
+    /* تنسيق حاوية تسجيل الدخول */
     .login-container {
-      background: #fff;
+      position: relative;
+      background: rgba(255, 255, 255, 0.9);
       padding: 40px;
       border-radius: 8px;
       box-shadow: 0 0 30px rgba(0,0,0,0.15);
-      width: 300px;
+      width: 90%;
+      max-width: 300px;
       text-align: center;
+      margin: auto;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    /* زر الترجمة في زاوية البطاقة */
+    #translateBtn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      border: none;
+      background: none;
+      cursor: pointer;
+      font-size: 0.9em;
+      color: #3498db;
     }
     .login-container h2 {
       margin-bottom: 20px;
+      font-size: 1.5em;
+    }
+    /* تنسيق العبارة بخط مميز مع تدرج لوني */
+    .company-info {
+      font-family: 'Cairo', sans-serif;
+      font-size: 1.1em;
+      font-weight: 700;
+      margin-bottom: 15px;
+      background: linear-gradient(to right, #3498db, #8e44ad);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
     input[type="text"], input[type="password"] {
       width: 100%;
@@ -33,8 +71,9 @@
       margin: 10px 0;
       border: 2px solid #eee;
       border-radius: 6px;
+      box-sizing: border-box;
     }
-    button {
+    button[type="submit"] {
       padding: 12px;
       width: 100%;
       background: #3498db;
@@ -43,13 +82,15 @@
       border-radius: 6px;
       cursor: pointer;
       margin-top: 10px;
+      font-size: 1em;
     }
-    button:hover {
+    button[type="submit"]:hover {
       background: #2980b9;
     }
     .alert {
       color: #e74c3c;
       margin-top: 10px;
+      font-size: 0.9em;
     }
     .login-logo {
       width: 80px;
@@ -64,20 +105,76 @@
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database-compat.js"></script>
 </head>
 <body>
+  <!-- فيديو الخلفية -->
+  <video autoplay muted loop id="bg-video">
+    <source src="https://cdn.dribbble.com/userupload/28774288/file/large-0f5d92145d706df70e061ebbf838fa27.mp4" type="video/mp4">
+    متصفحك لا يدعم الفيديو.
+  </video>
+
   <div class="login-container">
-    <!-- Small rounded image for login page -->
-    <img class="login-logo" src="https://scontent.fjrs28-1.fna.fbcdn.net/v/t39.30808-6/471747354_122099892014715775_3226043878643219535_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=NY9kpH5dCp8Q7kNvgFjPcDR&_nc_oc=AdichrKT9DoTy28yGZ98KDYMDPVCdiRNCf4QOJNrytAGaTcWPZbmjYDbg35UHLHA4eU&_nc_zt=23&_nc_ht=scontent.fjrs28-1.fna&_nc_gid=AFWUQlD-1ziVp7La0qO1Gkw&oh=00_AYBjZ96CDyy3OoXa7Nlt4mAmwqF7vNSoFSWYjC_2Li8VrQ&oe=67C83B25" alt="Login Logo">
-    <h2>Login</h2>
+    <!-- زر الترجمة -->
+    <button id="translateBtn">English</button>
+    <!-- صورة شعار الموقع -->
+    <img class="login-logo" src="https://scontent.fjrs28-1.fna.fbcdn.net/v/t39.30808-6/471747354_122099892014715775_3226043878643219535_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=NY9kpH5dCp8Q7kNvgFjPcDR&_nc_oc=AdichrKT9DoTy28yGZ98KDYMDPVCdiRNCf4QOJNrytAGaTcWPZbmjYDbg35UHLHA4eU&_nc_zt=23&_nc_ht=scontent.fjrs28-1.fna&_nc_gid=AFWUQlD-1ziVp7La0qO1Gkw&oh=00_AYBjZ96CDyy3OoXa7Nlt4mAmwqF7vNSoFSWYjC_2Li8VrQ&oe=67C83B25" alt="شعار تسجيل الدخول">
+    <!-- العبارة بخط عربي مميز وتدرج لوني -->
+    <p class="company-info">نظام حسابات Mulberry Company في فلسطين</p>
+    <h2>تسجيل الدخول</h2>
     <form id="loginForm">
-      <input type="text" id="username" placeholder="Username" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
+      <input type="text" id="username" placeholder="اسم المستخدم" required>
+      <input type="password" id="password" placeholder="كلمة المرور" required>
+      <button type="submit">دخول</button>
     </form>
     <div id="loginAlert" class="alert"></div>
   </div>
 
   <script>
-    // Firebase Configuration (same as in the other pages)
+    // تعريف الترجمات للغتين العربية والإنجليزية
+    const translations = {
+      ar: {
+        title: "تسجيل الدخول - نظام حسابات Mulberry Company في فلسطين",
+        companyInfo: "نظام حسابات Mulberry Company في فلسطين",
+        loginHeading: "تسجيل الدخول",
+        usernamePlaceholder: "اسم المستخدم",
+        passwordPlaceholder: "كلمة المرور",
+        loginButton: "دخول",
+        translateButton: "English",
+        invalidEmployeePassword: "كلمة المرور غير صحيحة لحساب الموظف.",
+        noAccountFound: "لم يتم العثور على حساب بهذا الاسم.",
+        errorPrefix: "خطأ: "
+      },
+      en: {
+        title: "Login - Mulberry Company Accounting System in Palestine",
+        companyInfo: "Mulberry Company Accounting System in Palestine",
+        loginHeading: "Login",
+        usernamePlaceholder: "Username",
+        passwordPlaceholder: "Password",
+        loginButton: "Login",
+        translateButton: "عربي",
+        invalidEmployeePassword: "Invalid password for employee account.",
+        noAccountFound: "No account found with this username.",
+        errorPrefix: "Error: "
+      }
+    };
+
+    let currentLang = "ar"; // اللغة الافتراضية
+
+    function updateLanguage() {
+      document.title = translations[currentLang].title;
+      document.querySelector('.company-info').textContent = translations[currentLang].companyInfo;
+      document.querySelector('.login-container h2').textContent = translations[currentLang].loginHeading;
+      document.getElementById('username').placeholder = translations[currentLang].usernamePlaceholder;
+      document.getElementById('password').placeholder = translations[currentLang].passwordPlaceholder;
+      document.querySelector('button[type="submit"]').textContent = translations[currentLang].loginButton;
+      document.getElementById('translateBtn').textContent = translations[currentLang].translateButton;
+    }
+
+    // زر الترجمة يقوم بتبديل اللغة بين العربية والإنجليزية
+    document.getElementById('translateBtn').addEventListener('click', function() {
+      currentLang = (currentLang === "ar") ? "en" : "ar";
+      updateLanguage();
+    });
+
+    // إعدادات Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyAi3_y7ugKB0cgzMV1-IVvbE2BwG_9RKSs",
       authDomain: "team-analysis-3c196.firebaseapp.com",
@@ -89,25 +186,25 @@
       measurementId: "G-853WkH2JK7"
     };
 
-    // Initialize Firebase
+    // تهيئة Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
 
     document.getElementById('loginForm').addEventListener('submit', function(e) {
       e.preventDefault();
-      const username = document.getElementById('username').value.trim();
+      // تحويل اسم المستخدم إلى حروف صغيرة
+      const username = document.getElementById('username').value.trim().toLowerCase();
       const password = document.getElementById('password').value.trim();
       const loginAlert = document.getElementById('loginAlert');
 
-      // Check for admin credentials first
+      // التحقق من بيانات المدير أولاً
       if(username === "a7mad.mutaz" && password === "123&ahmad") {
-        // Set session (for demonstration, using localStorage)
         localStorage.setItem('userRole', 'admin');
         window.location.href = "admin.html";
         return;
       }
 
-      // Otherwise, check employee accounts
+      // التحقق من حسابات الموظفين
       database.ref('employeeAccounts').orderByChild('username').equalTo(username).once('value')
       .then(snapshot => {
         if(snapshot.exists()) {
@@ -120,22 +217,24 @@
             }
           });
           if(valid) {
-            // Set session info
             localStorage.setItem('userRole', 'employee');
-            localStorage.setItem('employeeName', employeeData.name); // employee's full name
+            localStorage.setItem('employeeName', employeeData.name);
             localStorage.setItem('employeeUsername', employeeData.username);
             window.location.href = "employee.html";
           } else {
-            loginAlert.textContent = "Invalid password for employee account.";
+            loginAlert.textContent = translations[currentLang].invalidEmployeePassword;
           }
         } else {
-          loginAlert.textContent = "No account found with this username.";
+          loginAlert.textContent = translations[currentLang].noAccountFound;
         }
       })
       .catch(error => {
-        loginAlert.textContent = "Error: " + error.message;
+        loginAlert.textContent = translations[currentLang].errorPrefix + error.message;
       });
     });
+
+    // تحديث الصفحة للغة الافتراضية عند التحميل
+    updateLanguage();
   </script>
 </body>
 </html>
