--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
 </head>
 <body>
   <!-- فيديو الخلفية بدون عناصر تحكم -->
-  <video autoplay muted loop id="bg-video">
-    <source src="https://cdn.dribbble.com/userupload/28774288/file/large-0f5d92145d706df70e061ebbf838fa27.mp4" type="video/mp4">
-    متصفحك لا يدعم الفيديو.
-  </video>
+  <video autoplay muted loop playsinline webkit-playsinline id="bg-video">
+  <source src="https://cdn.dribbble.com/userupload/28774288/file/large-0f5d92145d706df70e061ebbf838fa27.mp4" type="video/mp4">
+  متصفحك لا يدعم الفيديو.
+</video>
+
 
   <div class="login-container">
     <!-- زر الترجمة -->
