--- a/employee.html
+++ b/employee.html
@@ -24,6 +24,25 @@
       object-fit: cover;
       pointer-events: none; /* تعطيل التفاعل مع الفيديو */
     }
+    /* زر الترجمة في موضع ثابت خارج البطاقة */
+    #langToggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1000;
+      background: #3498db;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      padding: 8px 10px;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.3s ease;
+      font-size: 18px;
+    }
+    #langToggle:hover {
+      background: #2980b9;
+      transform: scale(1.1);
+    }
     /* قواعد عامة */
     body {
       font-family: 'Roboto', sans-serif;
@@ -77,25 +96,6 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
       position: relative;
       overflow: hidden;
-    }
-    /* زر الترجمة على شكل أيقونة في الزاوية العليا اليمنى */
-    .lang-toggle-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      z-index: 10;
-      background: #3498db;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 8px 10px;
-      cursor: pointer;
-      transition: background 0.3s ease, transform 0.3s ease;
-      font-size: 18px;
-    }
-    .lang-toggle-btn:hover {
-      background: #2980b9;
-      transform: scale(1.1);
     }
     /* تنسيق ألسنة التنقل */
     .tab-nav {
@@ -336,16 +336,17 @@
     متصفحك لا يدعم تشغيل الفيديو.
   </video>
   
+  <!-- زر الترجمة في موضع ثابت خارج البطاقة -->
+  <button id="langToggle" onclick="toggleLanguage()"><i class="fas fa-language"></i></button>
+  
   <div class="header">
     <div class="header-left">
-      <img class="header-logo" id="employeePhotoDisplay" src="https://scontent.fjrs28-1.fna.fbcdn.net/v/t39.30808-6/471747354_122099892014715775_3226043878643219535_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=NY9kpH5dCp8Q7kNvgFjPcDR&_nc_oc=AdichrKT9DoTy28yGZ98KDYMDPVCdiRNCf4QOJNrytAGaTcWPZbmjYDbg35UHLHA4eU&_nc_zt=23&_nc_ht=scontent.fjrs28-1.fna&_nc_gid=AFWUQlD-1ziVp7La0qO1Gkw&oh=00_AYBjZ96CDyy3OoXa7Nlt4mAmwqF7vNSoFSWYjC_2Li8VrQ&oe=67C83B25" alt="صورة الموظف">
+      <img class="header-logo" id="employeePhotoDisplay" src="" alt="صورة الموظف">
       <h1 id="employeeNameDisplay">لوحة الموظف</h1>
     </div>
     <button class="logout-btn" onclick="logout()">تسجيل الخروج</button>
   </div>
   <div class="container">
-    <!-- زر تبديل اللغة (أيقونة) -->
-    <button id="langToggle" class="lang-toggle-btn" onclick="toggleLanguage()"><i class="fas fa-language"></i></button>
     <!-- ألسنة التنقل -->
     <div class="tab-nav">
       <button id="tabAnalyticsBtn" class="active" onclick="showEmployeeTab('analytics', event)">تحليلات</button>
@@ -631,7 +632,7 @@
       document.getElementById('filterPeriod').style.display = (type === 'period') ? 'block' : 'none';
     }
 
-    // تحميل صورة الموظف للعرض في الهيدر مع تجاوز الكاش
+    // تحميل صورة الموظف من قاعدة البيانات وتحديثها (مع معامل لتجاوز الكاش)
     function loadEmployeePhoto() {
       database.ref('employees').orderByChild('name').equalTo(employeeName).once('value')
       .then(snapshot => {
@@ -639,6 +640,8 @@
         snapshot.forEach(child => { empPhoto = child.val().photo; });
         if (empPhoto) {
           document.getElementById('employeePhotoDisplay').src = empPhoto + '?t=' + new Date().getTime();
+        } else {
+          document.getElementById('employeePhotoDisplay').src = 'default-user.png'; // صورة افتراضية في حال عدم وجود صورة
         }
       });
     }
@@ -699,6 +702,7 @@
         let updates = {};
         if(newUsername) { updates.username = newUsername; }
         if(newPassword) { updates.password = newPassword; }
+        // إذا تم اختيار صورة جديدة، قم برفعها وتحديث قاعدة البيانات
         if (fileInput.files.length > 0) {
           const file = fileInput.files[0];
           const storageRef = storage.ref();
@@ -706,17 +710,23 @@
           fileRef.put(file).then(() => {
             fileRef.getDownloadURL().then(photoURL => {
               updates.photo = photoURL;
+              // تحديث بيانات الموظف في قاعدة البيانات
               database.ref('employees/' + empKey).update(updates)
               .then(() => {
-                // إعادة تحميل الصورة بعد التحديث
-                loadEmployeePhoto();
+                loadEmployeePhoto(); // إعادة تحميل الصورة بعد التحديث
                 alert("تم تحديث إعدادات الحساب.");
+              })
+              .catch(error => {
+                alert("حدث خطأ أثناء تحديث البيانات: " + error.message);
               });
-              // تحديث حساب الموظف (يمكن تعديل هذا الجزء إذا كان مطلوب تحديث بيانات أخرى)
+              // تحديث بيانات حساب الموظف في حال وجوده
               database.ref('employeeAccounts').orderByChild('name').equalTo(employeeName).once('value')
               .then(snap => {
                 snap.forEach(child => {
-                  child.ref.update({ username: newUsername || child.val().username, password: newPassword || child.val().password });
+                  child.ref.update({ 
+                    username: newUsername || child.val().username, 
+                    password: newPassword || child.val().password 
+                  });
                 });
               });
             }).catch(error => {
@@ -726,6 +736,7 @@
             alert("فشل تحميل الصورة: " + error.message);
           });
         } else {
+          // في حال عدم تغيير الصورة
           database.ref('employees/' + empKey).update(updates)
           .then(() => {
             alert("تم تحديث إعدادات الحساب.");
@@ -733,7 +744,10 @@
           database.ref('employeeAccounts').orderByChild('name').equalTo(employeeName).once('value')
           .then(snap => {
             snap.forEach(child => {
-              child.ref.update({ username: newUsername || child.val().username, password: newPassword || child.val().password });
+              child.ref.update({ 
+                username: newUsername || child.val().username, 
+                password: newPassword || child.val().password 
+              });
             });
           });
         }
