--- a/employee.html
+++ b/employee.html
@@ -22,7 +22,6 @@
       min-height: 100%;
       z-index: -1;
       object-fit: cover;
-      pointer-events: none; /* تعطيل التفاعل مع الفيديو */
     }
     /* قواعد عامة */
     body {
@@ -50,10 +49,6 @@
       object-fit: cover;
       margin-left: 10px;
     }
-    /* رسالة الترحيب باللون الأبيض */
-    #employeeNameDisplay {
-      color: #fff;
-    }
     .logout-btn {
       padding: 8px 16px;
       background: #e74c3c;
@@ -78,11 +73,11 @@
       position: relative;
       overflow: hidden;
     }
-    /* زر الترجمة على شكل أيقونة في الزاوية العليا اليمنى */
+    /* زر تبديل اللغة بشكل أيقونة */
     .lang-toggle-btn {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 15px;
+      left: 15px;
       z-index: 10;
       background: #3498db;
       color: #fff;
@@ -303,8 +298,6 @@
       border-color: #3498db;
       outline: none;
     }
-    /* تحويل مدخل اسم المستخدم لأحرف صغيرة */
-    #accUsername { text-transform: lowercase; }
     .account-settings button {
       margin-top: 15px;
       padding: 10px 20px;
@@ -330,8 +323,8 @@
   </style>
 </head>
 <body>
-  <!-- خلفية الفيديو (تعمل فقط كخلفية بدون تفاعل) -->
-  <video autoplay muted loop id="bgVideo" playsinline disablePictureInPicture>
+  <!-- خلفية الفيديو -->
+  <video autoplay muted loop id="bgVideo">
     <source src="https://cdn.dribbble.com/userupload/28774288/file/large-0f5d92145d706df70e061ebbf838fa27.mp4" type="video/mp4">
     متصفحك لا يدعم تشغيل الفيديو.
   </video>
@@ -410,6 +403,7 @@
       <div class="account-settings">
         <h3 id="settingsHeader">إعدادات الحساب</h3>
         <label id="usernameLabel" for="accUsername">تغيير اسم المستخدم:</label>
+        <!-- تحويل قيمة المدخل دائمًا إلى أحرف صغيرة -->
         <input type="text" id="accUsername" placeholder="اسم المستخدم الجديد" oninput="this.value = this.value.toLowerCase()">
         <label id="passwordLabel" for="accPassword">تغيير كلمة المرور:</label>
         <input type="password" id="accPassword" placeholder="كلمة المرور الجديدة">
@@ -421,12 +415,6 @@
   </div>
   
   <script>
-    // منع الرجوع للخلف لمنع الوصول للصفحة بدون تسجيل خروج
-    history.pushState(null, null, location.href);
-    window.onpopstate = function () {
-      history.go(1);
-    };
-
     // إعدادات Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyAi3_y7ugKB0cgzMV1-IVvbE2BwG_9RKSs",
@@ -505,15 +493,15 @@
       }
     };
 
-    // التحقق من تسجيل الدخول (يجب أن تكون معلومات تسجيل الدخول محفوظة)
+    // استرجاع اسم الموظف المسجل
     const employeeName = localStorage.getItem('employeeName');
     if (!employeeName) {
-      alert("لم يتم العثور على جلسة الموظف. الرجاء تسجيل الدخول.");
-      window.location.href = "index.html";
+      alert("لم يتم العثور على جلسة الموظف. الرجاء تسجيل الدخول مرة أخرى.");
+      window.location.href = "login.html";
     }
     document.getElementById('employeeNameDisplay').textContent = translations[currentLanguage].welcome + employeeName;
 
-    // تحديث النصوص الثابتة بناءً على اللغة الحالية
+    // تحديث النصوص الثابتة للواجهة بناءً على اللغة الحالية
     function updateStaticTexts() {
       document.getElementById('employeeNameDisplay').textContent = translations[currentLanguage].welcome + employeeName;
       document.querySelector('.logout-btn').textContent = translations[currentLanguage].logout;
@@ -535,7 +523,7 @@
     }
     updateStaticTexts();
 
-    // نص الدعم الفني المستخدم في المحادثة
+    // متغير لتحديد نص الدعم الفني في المحادثة
     let supportNameText = translations[currentLanguage].supportName;
 
     // استرجاع تعيينات البائع المميز
@@ -544,7 +532,7 @@
       topSellerDesignations = snapshot.val() || {};
     });
 
-    // دالة للحصول على نسبة البائع المميز
+    // دالة المساعدة للحصول على نسبة البائع المميز
     function getTopSellerRate(empName, saleDate) {
       let rate = 0.5; // افتراضي للموظف العادي
       for (const key in topSellerDesignations) {
@@ -631,14 +619,14 @@
       document.getElementById('filterPeriod').style.display = (type === 'period') ? 'block' : 'none';
     }
 
-    // تحميل صورة الموظف للعرض في الهيدر مع تجاوز الكاش
+    // تحميل صورة الموظف للعرض في الهيدر
     function loadEmployeePhoto() {
       database.ref('employees').orderByChild('name').equalTo(employeeName).once('value')
       .then(snapshot => {
         let empPhoto = "";
         snapshot.forEach(child => { empPhoto = child.val().photo; });
         if (empPhoto) {
-          document.getElementById('employeePhotoDisplay').src = empPhoto + '?t=' + new Date().getTime();
+          document.getElementById('employeePhotoDisplay').src = empPhoto;
         }
       });
     }
@@ -706,36 +694,26 @@
           fileRef.put(file).then(() => {
             fileRef.getDownloadURL().then(photoURL => {
               updates.photo = photoURL;
-              database.ref('employees/' + empKey).update(updates)
-              .then(() => {
-                // إعادة تحميل الصورة بعد التحديث
-                loadEmployeePhoto();
-                alert("تم تحديث إعدادات الحساب.");
-              });
-              // تحديث حساب الموظف (يمكن تعديل هذا الجزء إذا كان مطلوب تحديث بيانات أخرى)
+              database.ref('employees/' + empKey).update(updates);
               database.ref('employeeAccounts').orderByChild('name').equalTo(employeeName).once('value')
               .then(snap => {
                 snap.forEach(child => {
                   child.ref.update({ username: newUsername || child.val().username, password: newPassword || child.val().password });
                 });
               });
-            }).catch(error => {
-              alert("حدث خطأ في تحديث الصورة: " + error.message);
+              loadEmployeePhoto();
+              alert("تم تحديث إعدادات الحساب.");
             });
-          }).catch(error => {
-            alert("فشل تحميل الصورة: " + error.message);
           });
         } else {
-          database.ref('employees/' + empKey).update(updates)
-          .then(() => {
-            alert("تم تحديث إعدادات الحساب.");
-          });
+          database.ref('employees/' + empKey).update(updates);
           database.ref('employeeAccounts').orderByChild('name').equalTo(employeeName).once('value')
           .then(snap => {
             snap.forEach(child => {
               child.ref.update({ username: newUsername || child.val().username, password: newPassword || child.val().password });
             });
           });
+          alert("تم تحديث إعدادات الحساب.");
         }
       });
     }
@@ -751,9 +729,13 @@
     /* ------------------ تبديل اللغة ------------------ */
     function toggleLanguage() {
       currentLanguage = currentLanguage === 'ar' ? 'en' : 'ar';
+      // تحديث النصوص الثابتة
       updateStaticTexts();
+      // تحديث اسم الدعم الفني المستخدم في رسائل المحادثة
       supportNameText = translations[currentLanguage].supportName;
+      // إعادة تحميل بيانات المبيعات لتحديث رؤوس الجدول والنصوص
       loadSalesData();
+      // إعادة تحميل رسائل المحادثة لتحديث اسم الدعم الفني
       loadEmployeeChatMessages();
     }
 
